# skalang

./: .gitignore  .gitmodules  AST.h  ASTBuilder.h  CMakeLists.txt  IfElseTokenEvent.h  LICENSE  Makefile  Parser.cpp  Parser.h  README.md  ReservedKeywordsPool.h  Scope.cpp  Scope.h  ShuntingYardExpressionParser.cpp  ShuntingYardExpressionParser.h  SymbolTable.cpp  SymbolTable.h  Token.h  TokenReader.cpp  TokenReader.h  Tokenizer.cpp  Tokenizer.h  VarTokenEvent.h  bytecode_example  skalang.cbp  skalang.cpp  skalang.depend  skalang.layout  skalang.vcxproj  skalang.vcxproj.filters
bytecode/generator/: CMakeLists.txt
bytecode/interpreter/: CMakeLists.txt
bytecode/runner/: CMakeLists.txt
bytecode/runner/src/: main.cpp
bytecode/serializer/: CMakeLists.txt
interpreter/: CMakeLists.txt
interpreter/src/Interpreter/: Interpreter.cpp  Interpreter.h  InterpreterDeclarer.h  InterpreterOperator.h  InterpreterOperatorArrayDeclaration.cpp  InterpreterOperatorArrayDeclaration.h  InterpreterOperatorArrayUse.cpp  InterpreterOperatorBinary.cpp  InterpreterOperatorBinary.h  InterpreterOperatorBlock.h  InterpreterOperatorFieldAccess.cpp  InterpreterOperatorFieldAccess.h  InterpreterOperatorFor.h  InterpreterOperatorFunctionCall.cpp  InterpreterOperatorFunctionCall.h  InterpreterOperatorFunctionDeclaration.cpp  InterpreterOperatorFunctionDeclaration.h  InterpreterOperatorIfElse.cpp  InterpreterOperatorIfElse.h  InterpreterOperatorImport.cpp  InterpreterOperatorImport.h  InterpreterOperatorReturn.h  InterpreterOperatorScriptLink.cpp  InterpreterOperatorScriptLink.h  InterpreterOperatorUnary.cpp  InterpreterOperatorUnary.h  InterpreterOperatorUnit.h  InterpreterOperatorUserDefinedObject.h  InterpreterOperatorVariableAffectation.cpp  InterpreterOperatorVariableAffectation.h  InterpreterOperatorVariableDeclaration.cpp  InterpreterOperatorVariableDeclaration.h  MemoryTable.cpp  MemoryTable.h  ScriptCache.h
runner/: CMakeLists.txt  LogError.txt  callback.miniska  character.miniska  dummy.miniska  input_component.miniska  jump_wall.miniska  play.miniska  point.miniska  run.miniska
runner/scripts/std/: std.io.path.miniska  std.parameters.miniska
runner/src/: main.cpp
runner/src/std/: module.h
src/: AST.h  BlockTokenEvent.h  CMakeCache.txt  CMakeLists.txt  ExpressionTokenEvent.h  ExpressionType.h  FunctionTokenEvent.h  LoggerConfig.cpp  LoggerConfig.h  Makefile  Operator.h  Parser.cpp  Parser.h  ReservedKeywordsPool.cpp  ReservedKeywordsPool.h  SemanticTypeChecker.cpp  SemanticTypeChecker.h  ShuntingYardExpressionParser.cpp  ShuntingYardExpressionParser.h  SymbolTable.cpp  SymbolTable.h  Token.h  TokenReader.cpp  Tokenizer.cpp  Tokenizer.h  TypeBuilder.cpp  TypeBuilder.h  TypeBuilderBinary.cpp  TypeBuilderBinary.h  TypeBuilderCalculatorDispatcher.cpp  TypeBuilderFieldAccess.cpp  TypeBuilderFieldAccess.h  TypeBuilderFunctionDeclaration.cpp  TypeBuilderFunctionDeclaration.h  TypeBuilderOperator.h  TypeBuilderParameterDeclaration.cpp  TypeBuilderParameterDeclaration.h  TypeBuilderUnary.h  TypeBuilderVariableAffectation.h  TypeBuilderVariableDeclaration.cpp  (+3 more)
src/skalang.dir/MinSizeRel/: objects.txt
src/skalang.dir/RelWithDebInfo/: objects.txt
src/skalang.dir/Release/: objects.txt
src/src/: AST.cpp  AST.h  ASTBuilder.h  ASTNodePtr.h  ArrayTokenEvent.h  BlockTokenEvent.h  ExpressionType.h  ForTokenEvent.h  FunctionTokenEvent.h  LoggerConfig.cpp  LoggerConfig.h  LoggerConfigLang.cpp  LoggerConfigLang.h  MatcherArray.cpp  MatcherArray.h  MatcherBlock.cpp  MatcherFor.cpp  MatcherFunction.cpp  MatcherFunction.h  MatcherIfElse.cpp  MatcherReturn.cpp  MatcherReturn.h  MatcherVar.cpp  MatcherVar.h  Operator.h  OperatorTraits.h  Parser.cpp  Parser.h  ReservedKeywordsPool.cpp  ReturnTokenEvent.h  ScopedSymbolTable.cpp  ScopedSymbolTable.h  SemanticTypeChecker.cpp  SemanticTypeChecker.h  ShuntingYardExpressionParser.cpp  ShuntingYardExpressionParser.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  (+37 more)
src/src/Config/: LoggerConfigLang.cpp  LoggerConfigLang.h
src/src/Container/: expression_stack.h  iterable_priority_queue.h  iterable_stack.h  order_indexed_string_map.h  sorted_observable.h  unique_buffered_priority_indexed_fixed_queue.h
src/src/Error/: LangError.h  ParserError.h
src/src/Event/: ArrayTokenEvent.h  BlockTokenEvent.h  BridgeTokenEvent.cpp  BridgeTokenEvent.h  ConverterTokenEvent.h  (+12 more)
std/: CMakeLists.txt
test/: CMakeLists.txt  ExpressionType_test.cpp  LogError.txt  LoggerConfig.h  Makefile  Parser_test.cpp  SemanticTypeChecker_test.cpp  SymbolTable_test.cpp  Tokenizer_test.cpp  main.cpp  skalang_test  skalang_test.args.json
test/bytecode/: CMakeLists.txt
test/interpreter/: CMakeLists.txt
test/src/: 100Tokenizer_test.cpp  110Parser_test.cpp  120ExpressionType_test.cpp  120SymbolTable_test.cpp  130TypeBuilderBinary_test.cpp  130TypeBuilderFieldAccess_test.cpp  130TypeBuilderVariableDeclaration_test.cpp  140SemanticTypeChecker_test.cpp  150SemanticTypeChecker_complex_test.cpp  200BytecodeGenerator_integer_maths_test.cpp  200BytecodeGenerator_test.cpp  200BytecodeGenerator_type_conversion_test.cpp  201BytecodeGenerator_conditional_test.cpp  201BytecodeGenerator_function_test.cpp  202BytecodeGenerator_no_type_conversion_test.cpp  203BytecodeGenerator_type_conversion_test.cpp  204BytecodeGenerator_control_flow_test.cpp  205BytecodeGenerator_script_test.cpp  300Interpreter_test.cpp  310Interpreter_script_test.cpp  400BytecodeInterpreter_integer_maths_test.cpp  410BytecodeInterpreter_conditional_test.cpp  410BytecodeInterpreter_function_test.cpp  415BytecodeInterpreter_no_type_conversion_test.cpp  415BytecodeInterpreter_type_conversion_test.cpp  420BytecodeInterpreter_control_flow_test.cpp  420BytecodeInterpreter_script_test.cpp  BytecodeCompare.cpp  BytecodeCompare.h  BytecodeGeneratorDataTestContainer.h  BytecodeGenerator_test.cpp  BytecodeInterpreterDataTestContainer.h  DataTestContainer.h  ExpressionType_test.cpp  Interpreter_script_test.cpp  Interpreter_test.cpp  Parser_test.cpp  SemanticTypeChecker_complex_test.cpp  SemanticTypeChecker_test.cpp  SymbolTable_test.cpp  (+9 more)
(+790 files in other folders)
